fix blame row alignment in safari
as per @silverwind

--- a/web_src/less/_base.less
+++ b/web_src/less/_base.less
@@ -1504,6 +1504,7 @@ a.ui.label:hover {
 .blame .code-inner {
   white-space: pre;
   word-break: normal;
+  word-wrap: normal; /* not using overflow-wrap because safari does not treat is an an alias */
 }
 
 .lines-commit {
